welcome.lessons.welcome.bat.bool2.NearTen.scala.error
nearTen:2: error: ';' expected but ')' found.
  if(a%10<=2 || 8<=)a%10){return true}
                        ^